namespace Mars_Rover_Project.Models.General_Interfaces;

public interface INavigation
{
    public void RunCommand(IVehicle marsRover);
}