namespace Mars_Rover_Project.Models.General_Interfaces;

public interface ISurface
{
    public int Lenght_X { get; set; }
    public int Width_Y { get; set; }
}