namespace Mars_Rover_Project.Models.Position;

public interface IPosition
{
    public List<int> initialPosition { get; set; }
}