namespace Mars_Rover_Project.Models.RoversAndPlateau;

public class CircularPlateau
{
    private double _radius;

    public CircularPlateau(int radius)
    {
        _radius = radius;
    }
}

