@startuml "MarsRover-Kata-UML.png"

interface IVehicle
{
+ void TurnAround()
+ void TurnLeft()
+ void TurnRight()
+ void Move()
+ void ExecuteCommand(string getMovement)
+ void GetCurrentPositionForConsole()
+ string GetCurrentPositionForFile()
+ int SetAxisX(int axisX)
+ int SetAxisY(int axisY)
+ void MoveForward()
+ void MoveBackward()
}

interface ISurface
{
+ int Lenght_X
+ int Width_Y
}

interface IPosition
{
+ List<int> initialPosition
}

interface INavigation
{
+ void RunCommand(IVehicle marsRover)
}

interface IMovementDirection
{
+ void MoveForward()
+ void MoveBackward()
+ void MoveLeft()
+ void MoveRight()
}

class MarsRover implements IVehicle
{
+ int axisX
+ int axisY
+ ChangeDirection.Direction roverDirection

+ MarsRover(string getInitialPosition)
+ void ExecuteCommand(string getMovement)
+ void TurnLeft()
+ void TurnRight()
+ void TurnAround()
+ void MoveForward()
+ void MoveBackward()
+ void SetAxisY(int axisY)
+ void SetAxisX(int axisX)
- void SetDirection(string direction)
+ int GetAxisY()
+ int GetAxisX()
+ Enum GetDirection()
+ void GetCurrentPositionForConsole()
+ string GetCurrentPositionForFile()
}
class MissionControl
{

- List<IVehicle> _roverList
+ ISurface Plateau
+ bool IsMissionComplete

+ ISurface GetPlateauDetails()
+ IVehicle GetRoverDetails(int roverNumber)
+ void ExecuteCommand(int roverNumber, string getMovement)

+ DeployRover(IVehicle rover, ISurface plateau )
+ CollisionInnerDetection(List<IVehicle> rovers)
- bool CollisionDetection(IVehicle)
- CheckNumberOfRoversOnSpecificPlateau(List<IVehicle>)

}
class RectangularPlateau implements ISurface
{
+ int Lenght_X
+ int Width_Y
+ RectangularPlateau(string gridSize)
+ int GetLenght()
+ int GetWidth()
}
class CircularPlateau implements ISurface
{
- double _radius
}
class NavigateBack implements INavigation
{
+ void RunCommand(IVehicle)
}
class NavigateLeft implements INavigation
{
+ void RunCommand(IVehicle)
}

class NavigateRight implements INavigation
{
+ void RunCommand(IVehicle)
}
class NavigateForward implements INavigation
{
+ void RunCommand((IVehicle marsRover)
}
class PositionInterpreter implements IPosition
{
+ List<int> initialPosition
+ string initialDirection
}

class NavigationInterpreter
{
- Dictionary<string, INavigation> NavigationDictionary
+ INavigation SetNavigation(char NavCommands)
}
class ChangeDirection
{
+ enum Direction { N, E, S, W, NW, NE, SW, SE }
+ void TurnLeft(IVehicle)
+ void TurnRight(IVehicle)
+ void TurnAround(IVehicle)
}

class MovingTheRover
{
+ void MoveForward(IVehicle rover)
+ void MoveBackward(IVehicle rover)
+ void MoveLeft(IVehicle rover)
+ void MoveRight(MIVehicle rover)
}
class Validator
{
+ bool DeploymentPositionValidator(int xCoordinate, int yCoordinate, RectangularPlateau plateau)
+ bool CommandValidator(string inputCommand)
+ bool DirectionValidator(string direction)
+ bool AxisValidator(int axis)
+ bool RectangularPlateauValidator(string plateauSize)
+ bool NumberOfRoversValidator(int roverCounter, int maxNumberOfBlocks)

}

class CollisionMessages
{
+ void SOSMorseCode()
+ void CollisionMessageForSamePosition()
+ void CollisionMessageForDeploymentOtherRovers()
+ void CollisionMessageForSameDestination()
}

class UserGuideline
{
+ void InputExampleForPlateauSize()
+ void InputExampleForDeploymentPosition()
+ void InputExampleForInstructionFirstRover()
+ void ProgressBar()
+ void BeepSoundForError()
+ void BeepSoundForSuccess()
}
class UserInputs
{
+ ISurface userPlateau
+ IVehicle userRover
+ List<string> userCommands
+ void GrabMovementInstructionsFromUser()
+ void GrabPlateauSizeFromUser()
+ void GrabRoverPositionFromUser()
}
class DrawPlateauAndRovers
{
+ async Task<Table> LiveTable()
}
class ReadFromFile
{
+ DirectoryInfo directory
+ IEnumerable<string> Read()
}
class WriteOnFile
{
- string _path
- List<string> _content
- void Write()
}

INavigation --> IVehicle
MarsRover --> PositionInterpreter
MarsRover --> NavigationInterpreter
MarsRover --> Validator

ChangeDirection --> IVehicle
MovingTheRover --> IVehicle

NavigationInterpreter --> INavigation

RectangularPlateau --> Validator

MissionControl --> IVehicle
MissionControl --> ISurface
MissionControl --> Validator
MissionControl --> MovingTheRover

DrawPlateauAndRovers --> MissionControl

UserInputs --> ISurface
UserInputs --> IVehicle

@enduml